--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:fix": "eslint --ext .vue,.js,jsx,.ts,.tsx ./ --max-warnings 0 --fix",
     "stylelint": "stylelint src/**/*.{html,vue,sass,less}",
     "stylelint:fix": "stylelint --fix src/**/*.{html,vue,css,sass,less}",
-    "prepare": "husky install",
+    "prepare": "",
     "site:preview": "npm run build && cp -r dist _site",
     "test": "echo \"no test specified,work in process\"",
     "test:coverage": "echo \"no test:coverage specified,work in process\""
@@ -58,7 +58,6 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-vue": "^9.15.1",
     "eslint-plugin-vue-scoped-css": "^2.5.0",
-    "husky": "^8.0.3",
     "less": "^4.1.3",
     "lint-staged": "^13.2.3",
     "mockjs": "^1.1.0",
@@ -70,7 +69,7 @@
     "stylelint-order": "~6.0.3",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
-    "vite-plugin-mock": "^3.0.0",
+    "vite-plugin-mock": "2.9.8",
     "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.8.8"
   },
